--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -47,7 +47,7 @@ Antag nu, at den ene koefficient i objektfunktion er rykket eller at den ene beg
 %
 Forestil nu, at rent hypotetisk at løsningssområdet er en tom
 mængde, da der ikke findes en løsning, som opfylder betingelserne samtidig. 
-Dette illustreres på figur \ref{eks:min_loes3}.
+Dette illustreres på figur \ref{fig:opti_loes3}.
 %
 \input{fig/tikz/optimering/opti_loes3}
 %
@@ -56,7 +56,7 @@ Dette betyder, at der ikke er nogle løsninger, som opfylder betingelserne, og d
 \\\\
 %
 Antag nu, at det lineære programmeringsproblem i stedet er ubegrænset opadtil.
-Dette illustreres på figur \ref{}. (figur 4.6)
+Dette illustreres på figur \ref{fig:opti_loes4}.
 %
 \input{fig/tikz/optimering/opti_loes4}
 %
