--- a/incl/main/grafisk_losning/degenerering.tex
+++ b/incl/main/grafisk_losning/degenerering.tex
@@ -44,7 +44,7 @@ En basal løsning $\mathbf{x}$ for $\mathcal{P}$ kaldes degenereret, hvis der er
 %
 Ved en lille ændring af en overflødig aktiv begrænsning, vil en degenereret basal løsning kunne undgås. 
 Figur \ref{fig:jegerikkesyg} ses $\mathbf{a}_1 \mathbf{x} = b_1$, der er en overflødig aktiv betingelse, der medfører en degenereret basal løsning.
-En lille ændring vil ændre den degenererede basale løsning til en basal løsning, hvilket kan ses på figur \ref{fig:mmmjegerikkesyg}, hvor $\mathbf{a}_1 \mathbf{x} = b_1 - \epsilon$
+En lille ændring vil ændre den degenererede basale løsning til en basal løsning, hvilket kan ses på figur \ref{fig:mmmjegerikkesyg}, hvor $\mathbf{a}_1 \mathbf{x} = b_1 - \epsilon$.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Flot graf alla Julie     %%%
