--- a/fig/tikz/geometri/degenerering_r2.tex
+++ b/fig/tikz/geometri/degenerering_r2.tex
@@ -6,46 +6,48 @@
 %
 %
 \begin{center}
-\begin{tikzpicture}[scale=3]
-% Koordinater
+\begin{tikzpicture}[scale=6]
+%
+% Koordinater 
+% ------------------------------------------------------
+\coordinate (a) at (0.1,0.1,-0.1);
+\coordinate (b) at (0.5,0.1,-0.1);
+\coordinate (aa) at (0.35,0.6,-0.1);
+\coordinate (bb) at (0.25,0.6,-0.1);
+\coordinate (c) at (0.2,0.5,-0.1);
+\coordinate (d) at (0.4,0.5,-0.1);
+\coordinate (e) at (0.3,0.5,-0.1);
+%
+% Polyeden
 % -------------------------------------------------------
-\coordinate (c) at (0.7,1.2,1.2);
-\coordinate (d) at (1.2,1.2,1.2);
-\coordinate (g) at (1.2,0.7,1.2);
-\coordinate (h) at (0.7,0.7,1.2);
-\coordinate (b) at (2,1.2,1.2);
-\coordinate (f) at (1.5,0.7,1.2);
-%
-% Tegning af vektorer
-% ------------------------------------------------------- 
-  \draw[thick,->](f)--(b);
-  \draw[thick,->](f)--(c);
-  \draw[thick,->](f)--(1.7,1.2,1.6);
-%
-% Punkter og linje 
+\filldraw [fill=myblue,opacity=0.5] 
+         (a) -- (b) -- (e) -- (a);
+%        
+% Streger 
 % -------------------------------------------------------
-\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{y}$};
-\filldraw[black] (1.4,1,1.2) circle (0pt) node[right] {$\mathbf{z}$};
+  \draw[thick](d)--(c);
+  \draw[thick](a)--(b)--(e)--(a);
+  \draw[thick](e)--(aa);
+  \draw[thick](e)--(bb);
 %
-% Planet - Hyperplanet
+%
+% Punkt 
 % -------------------------------------------------------
-\filldraw [fill=myblue,opacity=0.3] 
-         (b) -- (c) -- (1.7,1.2,1.6) -- cycle;
+\filldraw [black] (e) circle (0.2pt);
+\node at (0.3,0.6,-0.1) (){$A$};
+% 
 %
-%
-%% Koordinatssystem
-%% ------------------------------------------------------
-%\draw[thick,->] (0,0,-0.5) -- (1.5,0,-0.5) node[anchor=south east]{$x$};
-%\draw[thick] (0,0,-0.5) -- (-0.2,0,-0.5);
-%\draw[thick,->] (0,0,-0.5) -- (0,0.8,-0.5) node[anchor=north west]{$y$};
-%\draw[thick] (0,0,-0.5) -- (0,-0.2,-0.5);
-%\draw[thick,->] (0,0,-0.5) -- (0,0,0.3) node[anchor=south east]{$z$};
-%\draw[thick] (0,0,-0.5) -- (0,0,-0.8);
-%%
+% Koordinatsystemet 
+% -------------------------------------------------------
+\draw[thick,->] (0,0,0) -- (0.9,0,0) node[anchor=south east]{$x$};
+\draw[thick] (0,0,0) -- (-0.1,0,0);
+\draw[thick,->] (0,0,0) -- (0,0.7,0) node[anchor=north west]{$y$};
+\draw[thick] (0,0,0) -- (0,-0.1,0);
+\draw[thick,->] (0,0,0) -- (0,0,0.5) node[anchor=south east]{$z$};
+\draw[thick] (0,0,0) -- (0,0,-0.1);
 %
 \end{tikzpicture}
-  \captionof{figure}{Nej}
+  \captionof{figure}{En polyede med en degenereret basal løsning $A$ i $\R^2$.}
   \label{fig:mmmm2}
 \end{center}
 %
