--- a/fig/tikz/geometri/degenerering_std1.tex
+++ b/fig/tikz/geometri/degenerering_std1.tex
@@ -7,19 +7,20 @@
 %
 \begin{center}
 \begin{tikzpicture}[scale=6]
+%
 % Koordinater 
 % ------------------------------------------------------
 \coordinate (a) at (0.1,0.1,-0.1);
 \coordinate (b) at (0.5,0.1,-0.1);
-\coordinate (aa) at (0.2,0.7,-0.1);
-\coordinate (bb) at (0.4,0.7,-0.1);
-\coordinate (c) at (0.1,0.5,-0.1);
-\coordinate (d) at (0.5,0.5,-0.1);
+\coordinate (aa) at (0.35,0.6,-0.1);
+\coordinate (bb) at (0.25,0.6,-0.1);
+\coordinate (c) at (0.17,0.5,-0.1);
+\coordinate (d) at (0.43,0.5,-0.1);
 \coordinate (e) at (0.3,0.5,-0.1);
 %
-% Planet - Hyperplanet
+% Polyeden
 % -------------------------------------------------------
-\filldraw [fill=myblue,opacity=0.4] 
+\filldraw [fill=myblue,opacity=0.5] 
          (a) -- (b) -- (e) -- (a);
 %        
 % Streger 
@@ -29,6 +30,14 @@
   \draw[thick](e)--(aa);
   \draw[thick](e)--(bb);
 %
+%
+% Punkt 
+% -------------------------------------------------------
+\filldraw [black] (e) circle (0.2pt);
+\node at (0.3,0.6,-0.1) (){$A$};
+\node at (0.6 ,0.5,-0.1) (){$\mathbf{a}_1 \mathbf{x} = b_1$};
+% 
+%
 % Koordinatsystemet 
 % -------------------------------------------------------
 \draw[thick,->] (0,0,0) -- (0.9,0,0) node[anchor=south east]{$x$};
@@ -37,9 +46,9 @@
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 \draw[thick,->] (0,0,0) -- (0,0,0.5) node[anchor=south east]{$z$};
 \draw[thick] (0,0,0) -- (0,0,-0.1);
-% 
+%
 \end{tikzpicture}
-  \captionof{figure}{Nej har jeg sagt.}
+  \captionof{figure}{En overflødig aktiv betingelse $\mathbf{a}_1 \mathbf{x} = b_1$, der gør at $A$ er en degenereret basal løsning.}
   \label{fig:jegerikkesyg}
 \end{center}
 %
