Update ekstrema.tex, basal.tex, and alg_hjorne.tex

--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -61,6 +61,11 @@ Dette medfører, at der hverken er basale løsninger eller basale mulige løsnin
 Tre definitioner, som ønsker at beskrive det samme, er blevet givet.
 Det er muligt at skifte mellem definitionerne efter ønske, da de er ækvivalente.
 %
+%
+\input{fig/tikz/geometri/basal}
+\\\\
+%
+%
 \begin{thm}{}{hjorneeq}
 Lad $\mathcal{P}$ være en ikke-tom polyede og lad vektoren $\textbf{x}\in \mathcal{P}$.
 Så er følgende udsagn ækvivalente:
