Update ekstrema.tex, aktiv.tex, and 10 more files...

--- a/fig/tikz/geometri/degenerering_r3.tex
+++ b/fig/tikz/geometri/degenerering_r3.tex
@@ -42,7 +42,7 @@
 %
 % Punkt 
 % -------------------------------------------------------
-\filldraw [black] (e) circle (0.2pt) node[above] {$A$};
+\filldraw [black] (e) circle (0.2pt) node[above] {$\mathbf{x}$};
 % 
 % Koordinatsystemet 
 % -------------------------------------------------------
