--- a/fig/tikz/geometri/basal.tex
+++ b/fig/tikz/geometri/basal.tex
@@ -4,50 +4,46 @@
 %
 % Koordinater
 % -------------------------------------------------------
-\coordinate (a) at (0,0,0); %tjek
-\coordinate (b) at (0.7,0,0); % tjek
-\coordinate (n) at (-0.15,0,0); % tjek
+\coordinate (a) at (0,0,0); 
+\coordinate (b) at (0.7,0,0); 
 \coordinate (c) at (0.393,0.55,0); 
 \coordinate (d) at (0.252,0.805,0);
 \coordinate (e) at (0.066,0.434,0);
 \coordinate (f) at (0,0.41,0);
 \coordinate (g) at (0,0.305,0);
+\coordinate (h) at (-0.15,0,0); 
 %
 % Farvning
 % -------------------------------------------------------
-\filldraw[fill=myblue,opacity=0.3](a)--(b)--(c)--(e)--(g)--(a);
+\filldraw[fill=myblue,opacity=0.6](a)--(b)--(c)--(e)--(g)--(a);
   \draw[thick](-0.2,-0.1,0)--(0.3,0.9,0); % n -> d  
   \draw[thick](0.2,0.9,0)--(0.757,-0.1,0); % d -> b
   \draw[thick](-0.3,0.3,0)--(0.8,0.7,0); % f -> c
-  %\draw[thick](h)--(c);
 % 
 %
 % Punkterne 
 % -------------------------------------------------------
-\filldraw [black] (b) circle (0.2pt) node[below] {$B$};
-\filldraw [black] (a) circle (0.2pt) node[right] {$A$};
-\filldraw [black] (n) circle (0.2pt) node[right] {$N$};
-\filldraw [black] (c) circle (0.2pt) node[right] {$C$};
-\filldraw [black] (d) circle (0.2pt) node[right] {$D$};
-\filldraw [black] (e) circle (0.2pt) node[right] {$E$};
-\filldraw [black] (f) circle (0.2pt) node[left] {$F$};
-\filldraw [black] (g) circle (0.2pt) node[left] {$G$};
+\filldraw [black] (a) circle (0.2pt) node[anchor=north west] {$A$};
+\filldraw [black] (b) circle (0.2pt) node[anchor=north east] {$B$};
+\filldraw [black] (c) circle (0.2pt) node[anchor=south west] {$C$};
+\filldraw [black] (d) circle (0.2pt) node[anchor=west] {$D$};
+\filldraw [black] (e) circle (0.2pt) node[anchor=north west] {$E$};
+\filldraw [black] (f) circle (0.2pt) node[anchor=south east] {$F$};
+\filldraw [black] (g) circle (0.2pt) node[anchor=east] {$G$};
+\filldraw [black] (h) circle (0.2pt) node[anchor=north west] {$H$};
 %
-% Navngivning og prik til at gøre det pænt 
-% -------------------------------------------------------
-\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
-\draw[black] (0,0,0.7) circle (0pt);
 % 
+\filldraw [black] (0.27,0.17,0) circle (0pt) node[above] {$\mathcal{P}$};
 % 
 % Koordinatssystem 
 % -------------------------------------------------------
-\draw[thick,->] (0,0,0) -- (1,0,0) node[anchor=south east]{$x$};
+\draw[thick] (0,0,0) -- (0.9,0,0);
 \draw[thick] (0,0,0) -- (-0.2,0,0);
-\draw[thick,->] (0,0,0) -- (0,1,0) node[anchor=north west]{$y$};
+\draw[thick] (0,0,0) -- (0,0.9,0);
 \draw[thick] (0,0,0) -- (0,-0.2,0);
 %
 \end{tikzpicture}
-  \captionof{figure}{Punkterne $A,B,C,D,E,F$ og $G$ er basal løsninger, hvoraf $A,B,C,E$ og $F$ alle er basal mulige løsninger.}
+  \captionof{figure}{Punkterne $A,B,C,D,E,F,G$ og $H$ er basal løsninger, hvoraf $A,B,C,E$ og $G$ alle er basal mulige løsninger.}
   \label{fig:fig:basale}
 \end{center}
 %
