--- a/fig/tikz/geometri/degenerering_r2.tex
+++ b/fig/tikz/geometri/degenerering_r2.tex
@@ -12,6 +12,10 @@
 % ------------------------------------------------------
 \coordinate (a) at (0.1,0.1,-0.1);
 \coordinate (b) at (0.5,0.1,-0.1);
+\coordinate (a1) at (0.075,0.05,-0.1);
+\coordinate (b1) at (0.525,0.05,-0.1);
+\coordinate (a2) at (0.05,0.1,-0.1);
+\coordinate (b2) at (0.55,0.1,-0.1);
 \coordinate (aa) at (0.35,0.6,-0.1);
 \coordinate (bb) at (0.25,0.6,-0.1);
 \coordinate (c) at (0.2,0.5,-0.1);
@@ -29,12 +33,17 @@
   \draw[thick](a)--(b)--(e)--(a);
   \draw[thick](e)--(aa);
   \draw[thick](e)--(bb);
+  \draw[thick](b)--(b1);
+  \draw[thick](a)--(a1);
+  \draw[thick](b)--(b2);
+  \draw[thick](a)--(a2);
 %
 %
 % Punkt 
 % -------------------------------------------------------
 \filldraw [black] (e) circle (0.2pt);
-\node at (0.3,0.6,-0.1) (){$A$};
+\node at (0.3,0.6,-0.1) (){$\mathbf{x}$};
+\filldraw [black] (0,0,0.5) circle (0.pt);
 % 
 %
 % Koordinatsystemet 
@@ -43,8 +52,6 @@
 \draw[thick] (0,0,0) -- (-0.1,0,0);
 \draw[thick,->] (0,0,0) -- (0,0.7,0) node[anchor=north west]{$y$};
 \draw[thick] (0,0,0) -- (0,-0.1,0);
-\draw[thick,->] (0,0,0) -- (0,0,0.5) node[anchor=south east]{$z$};
-\draw[thick] (0,0,0) -- (0,0,-0.1);
 %
 \end{tikzpicture}
   \captionof{figure}{En polyede med en degenereret basal løsning $A$ i $\R^2$.}
