--- a/fig/tikz/geometri/ekstrema.tex
+++ b/fig/tikz/geometri/ekstrema.tex
@@ -33,6 +33,7 @@
 	\filldraw [black] (v) circle (2pt) node[left] {$\mathbf{v}$};
 	\filldraw [black] (w) circle (2pt) node[left] {$\mathbf{w}$};
 	\filldraw [black] (u) circle (2pt) node[left] {$\mathbf{u}$};
+	\filldraw [black] (-5,3) circle (0pt) node[left] {};
 %
 % Streger mellem punkterne 
 % -------------------------------------------------------
@@ -42,7 +43,7 @@
 %
 %
   \end{tikzpicture}
-  \caption{En afgrænset polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda) \mathbf{u}$.}
+  \caption{En polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda) \mathbf{u}$.}
   \label{fig:ekstrema}
 \end{figure}
 %
