--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -10,7 +10,7 @@ En polyeder $\mathcal{P} \in \R^n$  indeholder en \textbf{uendelig linje}, hvis 
 %
 Med denne definition kommer følgende sætning.
 %
-\begin{thm}{}{}
+\begin{thm}{}{ekstremums1}
 Lad $\mathcal{P} = \{\textbf{x} \in \R^n | \textbf{a}_i^T\textbf{x} \geq b_i, i = 1,2,\ldots,m  \}$ være et ikke-tomt polyeder.
 Så er følgende udsagn ækvivalente.
 %
